--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div id="apresentação">
+        <video autoplay muted loop>
+            <source src="media/magic_-_42197 (1080p).mp4" type="video/mp4">
+        </video>
         <nav>
             <img src="imgs/logo.svg" alt="Logo">
             <menu>
